1999-07-05 Akira Higuchi <a-higuti@math.sci.hokudai.ac.jp>
	
	* gnome-icon-text.h:
	* gnome-icon-item.c (iti_paint_text):
	* gnome-icon-item.c (iti_idx_from_x_y):
	* gnome-icon-text.c (free_row):
	* gnome-icon-text.c (gnome_icon_layout_text):
	* gnome-icon-text.c (gnome_icon_paint_text): Use wide characters
	internally so that we handle character boundaries correctly for
	multi-byte strings.

	* gnome-icon-item.c (iti_idx_from_x_y): Avoid SIGSEGV when
	icon text is empty.

	* gnome-icon-item.c (gnome_icon_text_item_configure): Use
	get_default_font() if fontname is NULL. This fixes the problem
	that gmc consumes memory.

Mon Jul  5 23:48:30 1999  Tim Janik  <timj@gtk.org>

        * gnome-canvas-image.c (recalc_if_needed): only adjust image->pixmap
        if we have an imlib image.

        * gnome-canvas-image.c (gnome_canvas_image_update): if we don't have
        image->im, try to feature pure ArtPixBuf instead (raph).

Mon Jul  5 20:11:01 1999  Tim Janik  <timj@gtk.org>

	* gnome-canvas.[hc]: added gnome_canvas_get_color_pixel() to retrive
	the pixel value for a GdkColor.

	* gnome-canvas-line.c:
	* gnome-canvas-text.c:
        * gnome-canvas-polygon.c:
        * gnome-canvas-rect-ellipse.c: support ::fill_color, ::fill_color_rgba,
	::fill_color_gdk, ::outline_color, ::outline_color_rgba and
	::outline_color_gdk for non-aa as for aa canvas. don't segfault upon
	NULL pointer passing, but assume no-fill and black in that case.
	always request an update on the canvas items if a color changed.
	keep the fill_color (sometimes fill_rgba) values uptodate, so
	querying *_color_rgba returns valid results.

1999-07-05  Miguel de Icaza  <miguel@gnu.org>

	* gnome-about.c: Make the inter-line skip, it is not required
	(descent+ascent has all the information we need).

1999-07-04  Miguel de Icaza  <miguel@gnu.org>

	* gnome-client.c: small fix for api docs.

	* gnome-canvas.h: Fixed names.

	* gnome-animator.h: Made the protypes use the same names.
